--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -27,23 +27,28 @@ input[type=number]{width:90px;padding:8px;border-radius:8px;border:1px solid var
 .pay{margin-top:12px;background:#0c2e1d;border:1px solid var(--s);border-radius:12px;padding:10px;font-size:14px}
 .pay table{width:100%;border-collapse:collapse}
 .pay th,.pay td{border-bottom:1px dashed #164a30;padding:6px;text-align:center}
-.winflash{animation:flash .9s ease-in-out 1}@keyframes flash{0%{box-shadow:0 0 0 0 rgba(19,228,122,.7)}100%{box-shadow:0 0 0 18px rgba(19,228,122,0)}}
+.winflash{animation:flash .9s ease-in-out 1}
+@keyframes flash{0%{box-shadow:0 0 0 0 rgba(19,228,122,.7)}100%{box-shadow:0 0 0 18px rgba(19,228,122,0)}}
 </style>
 </head>
 <body>
 <div class="wrap"><div class="panel">
 <h1>Mykonos Hot 5 🎰</h1>
+
 <div class="status">
   <div class="pill">Кредити: <span id="credits">1000</span></div>
   <div class="pill">Залог: <input id="bet" type="number" min="1" max="1000" step="1" value="10"></div>
   <div class="pill">Последна печалба: <span id="lastwin">0</span></div>
 </div>
+
 <div class="machine"><div id="reels" class="reels"></div></div>
+
 <div class="controls">
   <button id="spinBtn" class="spin">SPIN</button>
   <div class="wrapbox"><strong>Линии:</strong><span>5 (фиксирани)</span></div>
   <div class="wrapbox"><strong>Общ залог:</strong><span id="totalbet">10</span></div>
 </div>
+
 <div class="pay">
   <div><strong>Таблица с печалби (× общия залог)</strong></div>
   <table>
@@ -58,24 +63,140 @@ input[type=number]{width:90px;padding:8px;border-radius:8px;border:1px solid var
   <div>🍀 WILD само на барабани 2–4, замества без scatter-и. Печалбите от scatter се добавят към линиите.</div>
 </div>
 </div></div>
+
 <script>
 (()=>{
-const reelsRoot=document.getElementById('reels'),creditsEl=document.getElementById('credits'),lastWinEl=document.getElementById('lastwin'),betEl=document.getElementById('bet'),totalBetEl=document.getElementById('totalbet'),spinBtn=document.getElementById('spinBtn');
-const ROWS=3,COLS=5,SYM={SEVEN:'7️⃣',GRAPE:'🍇',WATERMELON:'🍉',BELL:'🔔',CHERRY:'🍒',LEMON:'🍋',ORANGE:'🍊',PLUM:'🍑',WILD:'🍀',STAR:'⭐',DOLLAR:'💲'};
+// DOM refs
+const reelsRoot=document.getElementById('reels'),
+      creditsEl=document.getElementById('credits'),
+      lastWinEl=document.getElementById('lastwin'),
+      betEl=document.getElementById('bet'),
+      totalBetEl=document.getElementById('totalbet'),
+      spinBtn=document.getElementById('spinBtn');
+
+// Config
+const ROWS=3, COLS=5;
+const SYM={SEVEN:'7️⃣',GRAPE:'🍇',WATERMELON:'🍉',BELL:'🔔',CHERRY:'🍒',LEMON:'🍋',ORANGE:'🍊',PLUM:'🍑',WILD:'🍀',STAR:'⭐',DOLLAR:'💲'};
+
+// Reel symbol weights (per reel)
 const base=[[SYM.SEVEN,2],[SYM.GRAPE,5],[SYM.WATERMELON,5],[SYM.BELL,6],[SYM.CHERRY,8],[SYM.LEMON,8],[SYM.ORANGE,8],[SYM.PLUM,8],[SYM.DOLLAR,3]];
-function bag(col){const b=[];const ex=[];if(col>=1&&col<=3)ex.push([SYM.WILD,3]);if(col===0||col===2||col===4)ex.push([SYM.STAR,2]);for(const [s,w] of base.concat(ex)){for(let i=0;i<w;i++)b.push(s)}return b}
-const reelBags=Array.from({length:COLS},(_,i)=>bag(i));
-const LINES=[[[0,0],[1,0],[2,0],[3,0],[4,0]],[[0,1],[1,1],[2,1],[3,1],[4,1]],[[0,2],[1,2],[2,2],[3,2],[4,2]],[[0,0],[1,1],[2,2],[3,1],[4,0]],[[0,2],[1,1],[2,0],[3,1],[4,2]]];
-const PAY={(SYM.SEVEN):{3:10,4:40,5:600},(SYM.GRAPE):{3:8,4:20,5:100},(SYM.WATERMELON):{3:8,4:20,5:100},(SYM.BELL):{3:4,4:10,5:40},(SYM.CHERRY):{3:2,4:6,5:20},(SYM.LEMON):{3:2,4:6,5:20},(SYM.ORANGE):{3:2,4:6,5:20},(SYM.PLUM):{3:2,4:6,5:20}};
-const SCAT_DOLLAR={3:3,4:20,5:100},STAR_PAY=20;
-const grid=[];for(let c=0;c<COLS;c++){const reel=document.createElement('div');reel.className='reel';reelsRoot.appendChild(reel);grid[c]=[];for(let r=0;r<ROWS;r++){const cell=document.createElement('div');cell.className='cell';cell.textContent=pick(reelBags[c]);reel.appendChild(cell);grid[c][r]=cell}}
-let credits=1000,spinning=false;betEl.addEventListener('input',()=>{totalBetEl.textContent=normBet()});totalBetEl.textContent=betEl.value;
-function pick(b){return b[Math.floor(Math.random()*b.length)]}function setCol(c,vals){for(let r=0;r<ROWS;r++)grid[c][r].textContent=vals[r]}function normBet(){return Math.max(1,Math.min(1000,Math.floor(Number(betEl.value)||0)))}
-function evalLines(board,bet){let win=0;for(const line of LINES){const seq=line.map(([x,y])=>board[x][y]);const m=matchWithWild(seq);if(m.len>=3)win+=PAY[m.sym][m.len]*bet}return win}
-function matchWithWild(seq){const cand=[SYM.SEVEN,SYM.GRAPE,SYM.WATERMELON,SYM.BELL,SYM.CHERRY,SYM.LEMON,SYM.ORANGE,SYM.PLUM];let best={len:0,sym:null};for(const t of cand){let len=0;for(let i=0;i<seq.length;i++){const s=seq[i];if(s===t||s===SYM.WILD)len++;else break}if(len>=3&&PAY[t]&&PAY[t][len]&&len>best.len)best={len:len,sym:t}}return best}
-function evalScatters(board,bet){let dollars=0;const starCols=new Set();for(let c=0;c<COLS;c++){for(let r=0;r<ROWS;r++){const s=board[c][r];if(s===SYM.DOLLAR)dollars++;if(s===SYM.STAR&&(c===0||c===2||c===4))starCols.add(c)}}let win=0;if(SCAT_DOLLAR[dollars])win+=SCAT_DOLLAR[dollars]*bet;if(starCols.size===3)win+=STAR_PAY*bet;return win}
-function spin(){if(spinning)return;const bet=normBet();if(credits<bet){alert('Недостатъчни кредити.');return}credits-=bet;creditsEl.textContent=credits;lastWinEl.textContent='0';spinning=true;spinBtn.disabled=true;
-const delays=[700,900,1100,1300,1500];const final=Array.from({length:COLS},()=>Array(ROWS).fill(SYM.CHERRY));for(let c=0;c<COLS;c++){const t=setInterval(()=>{setCol(c,[pick(reelBags[c]),pick(reelBags[c]),pick(reelBags[c])])},60+c*10);setTimeout(()=>{clearInterval(t);for(let r=0;r<ROWS;r++){final[c][r]=pick(reelBags[c])}setCol(c,final[c]);if(c===COLS-1){const win=evalLines(final,bet)+evalScatters(final,bet);credits+=win;creditsEl.textContent=credits;lastWinEl.textContent=win;if(win>0){reelsRoot.classList.remove('winflash');void reelsRoot.offsetWidth;reelsRoot.classList.add('winflash')}spinning=false;spinBtn.disabled=false}},delays[c])}}
+function makeBag(col){
+  const b=[], ex=[];
+  if(col>=1&&col<=3) ex.push([SYM.WILD,3]);              // wild only on reels 2-4
+  if(col===0||col===2||col===4) ex.push([SYM.STAR,2]);   // star only on 1,3,5
+  for(const [s,w] of base.concat(ex)) for(let i=0;i<w;i++) b.push(s);
+  return b;
+}
+const reelBag=Array.from({length:COLS},(_,i)=>makeBag(i));
+
+// Paylines (left -> right)
+const LINES=[
+  [[0,0],[1,0],[2,0],[3,0],[4,0]],
+  [[0,1],[1,1],[2,1],[3,1],[4,1]],
+  [[0,2],[1,2],[2,2],[3,2],[4,2]],
+  [[0,0],[1,1],[2,2],[3,1],[4,0]],
+  [[0,2],[1,1],[2,0],[3,1],[4,2]],
+];
+
+// Paytable (multipliers of TOTAL BET)
+const PAY={
+  [SYM.SEVEN]:{3:10,4:40,5:600},
+  [SYM.GRAPE]:{3:8,4:20,5:100},
+  [SYM.WATERMELON]:{3:8,4:20,5:100},
+  [SYM.BELL]:{3:4,4:10,5:40},
+  [SYM.CHERRY]:{3:2,4:6,5:20},
+  [SYM.LEMON]:{3:2,4:6,5:20},
+  [SYM.ORANGE]:{3:2,4:6,5:20},
+  [SYM.PLUM]:{3:2,4:6,5:20},
+};
+const SCAT_DOLL={3:3,4:20,5:100}, STAR_PAY=20;
+
+// Build grid
+const grid=[];
+for(let c=0;c<COLS;c++){
+  const col=document.createElement('div'); col.className='reel';
+  reelsRoot.appendChild(col); grid[c]=[];
+  for(let r=0;r<ROWS;r++){
+    const cell=document.createElement('div'); cell.className='cell';
+    cell.textContent=pick(reelBag[c]); col.appendChild(cell); grid[c][r]=cell;
+  }
+}
+
+let credits=1000, spinning=false;
+const normBet=()=>Math.max(1,Math.min(1000,Math.floor(Number(betEl.value)||0)));
+betEl.addEventListener('input',()=>totalBetEl.textContent=normBet());
+totalBetEl.textContent=betEl.value;
+
+// Utils
+function pick(b){return b[Math.floor(Math.random()*b.length)]}
+function setCol(c,vals){for(let r=0;r<ROWS;r++) grid[c][r].textContent=vals[r];}
+
+// Match with wilds (L2R)
+function bestMatch(seq){
+  const cand=[SYM.SEVEN,SYM.GRAPE,SYM.WATERMELON,SYM.BELL,SYM.CHERRY,SYM.LEMON,SYM.ORANGE,SYM.PLUM];
+  let best={len:0,sym:null};
+  for(const t of cand){
+    let len=0;
+    for(let i=0;i<seq.length;i++){
+      const s=seq[i];
+      if(s===t||s===SYM.WILD) len++; else break;
+    }
+    if(len>=3 && PAY[t] && PAY[t][len] && len>best.len) best={len,sym:t};
+  }
+  return best;
+}
+
+function evalLines(board,bet){
+  let win=0;
+  for(const line of LINES){
+    const seq=line.map(([x,y])=>board[x][y]);
+    const m=bestMatch(seq);
+    if(m.len>=3) win+=PAY[m.sym][m.len]*bet;
+  }
+  return win;
+}
+
+function evalScatters(board,bet){
+  let dollars=0; const starCols=new Set();
+  for(let c=0;c<COLS;c++){
+    for(let r=0;r<ROWS;r++){
+      const s=board[c][r];
+      if(s===SYM.DOLLAR) dollars++;
+      if(s===SYM.STAR && (c===0||c===2||c===4)) starCols.add(c);
+    }
+  }
+  let win=0;
+  if(SCAT_DOLL[dollars]) win+=SCAT_DOLL[dollars]*bet; // anywhere
+  if(starCols.size===3) win+=STAR_PAY*bet;            // exactly one on 1,3,5
+  return win;
+}
+
+function spin(){
+  if(spinning) return;
+  const bet=normBet();
+  if(credits<bet){ alert('Недостатъчни кредити.'); return; }
+  credits-=bet; creditsEl.textContent=credits; lastWinEl.textContent='0';
+  spinning=true; spinBtn.disabled=true;
+
+  const delays=[700,900,1100,1300,1500];
+  const final=Array.from({length:COLS},()=>Array(ROWS).fill(SYM.CHERRY));
+
+  for(let c=0;c<COLS;c++){
+    const t=setInterval(()=>{ setCol(c,[pick(reelBag[c]),pick(reelBag[c]),pick(reelBag[c])]); }, 60+c*10);
+    setTimeout(()=>{
+      clearInterval(t);
+      for(let r=0;r<ROWS;r++) final[c][r]=pick(reelBag[c]);
+      setCol(c,final[c]);
+
+      if(c===COLS-1){
+        const win=evalLines(final,bet)+evalScatters(final,bet);
+        credits+=win; creditsEl.textContent=credits; lastWinEl.textContent=win;
+        if(win>0){ reelsRoot.classList.remove('winflash'); void reelsRoot.offsetWidth; reelsRoot.classList.add('winflash'); }
+        spinning=false; spinBtn.disabled=false;
+      }
+    },delays[c]);
+  }
+}
 spinBtn.addEventListener('click',spin);
 })();
 </script>
