Mykonoshot5.html aktualisieren

--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -4,73 +4,31 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Mykonos Hot 5</title>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <style>
-:root{--bg1:#052f1b;--bg2:#0b5f36;--p:#0e3a25;--t:#e8fff3;--s:#114c30;--line:#1a6b43}
-html,body{margin:0;padding:0;height:100%;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";background:radial-gradient(1200px 600px at 50% 20%,var(--bg2),var(--bg1));color:var(--t)}
-.wrap{min-height:100dvh;display:flex;align-items:center;justify-content:center;padding:12px}
-.panel{width:100%;max-width:740px;background:linear-gradient(180deg,var(--p),#0a2a1b);border:1px solid var(--line);border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.45);padding:14px}
-h1{margin:0 0 8px;font-size:22px;letter-spacing:.3px;color:#fff;text-align:center}
-.status{display:grid;grid-template-columns:1fr 1fr 1fr;gap:8px;margin:8px 0}
-.pill{background:#0d3b25;border:1px solid var(--s);border-radius:999px;padding:8px 10px;font-weight:700;text-align:center}
-.machine{background:linear-gradient(180deg,#0e3a25,#0a2519);border:1px solid var(--line);border-radius:14px;padding:12px}
-.reels{display:grid;grid-template-columns:repeat(5,1fr);gap:8px}
-.reel{background:#082717;border:1px solid var(--s);border-radius:10px;padding:8px;height:300px;display:grid;grid-template-rows:repeat(3,1fr);gap:6px;overflow:hidden}
-.cell{display:flex;align-items:center;justify-content:center;font-size:44px;background:#0c3221;border:1px solid var(--s);border-radius:8px;box-shadow:inset 0 2px 6px rgba(0,0,0,.3)}
-.controls{display:grid;grid-template-columns:1fr 1fr 1fr;gap:10px;margin-top:12px}
-button{appearance:none;border:0;border-radius:12px;padding:12px;font-weight:800;font-size:16px;cursor:pointer;letter-spacing:.3px}
-.spin{background:linear-gradient(180deg,#10c56e,#09aa5e);color:#052515;border:1px solid #0aa45b}
-.spin[disabled]{opacity:.6;cursor:not-allowed}
-.wrapbox{background:#0d3b25;border:1px solid var(--s);border-radius:12px;padding:8px 10px;display:flex;align-items:center;justify-content:space-between}
-input[type=number]{width:90px;padding:8px;border-radius:8px;border:1px solid var(--s);background:#0b2e1d;color:#e8fff3;font-weight:800}
-.pay{margin-top:12px;background:#0c2e1d;border:1px solid var(--s);border-radius:12px;padding:10px;font-size:14px}
-.pay table{width:100%;border-collapse:collapse}
-.pay th,.pay td{border-bottom:1px dashed #164a30;padding:6px;text-align:center}
-.winflash{animation:flash .9s ease-in-out 1}
-@keyframes flash{0%{box-shadow:0 0 0 0 rgba(19,228,122,.7)}100%{box-shadow:0 0 0 18px rgba(19,228,122,0)}}
-
-/* 🍀 POP ефект за WILD */
-.cell.wild-pop{animation:clover-pop 600ms ease-out 1;box-shadow:0 0 0 0 rgba(19,228,122,.55)}
-@keyframes clover-pop{
-  0%{transform:scale(.8);filter:brightness(1.15)}
-  60%{transform:scale(1.15);box-shadow:0 0 18px 6px rgba(19,228,122,.45)}
-  100%{transform:scale(1);box-shadow:0 0 0 0 rgba(19,228,122,0)}
-}
+/* ... (същите CSS стилове като преди, включително POP ефекта) ... */
 </style>
 </head>
 <body>
 <div class="wrap"><div class="panel">
   <h1>Mykonos Hot 5 🎰</h1>
-
   <div class="status">
     <div class="pill">Кредити: <span id="credits">1000</span></div>
     <div class="pill">Залог: <input id="bet" type="number" min="1" max="1000" step="1" value="10"></div>
     <div class="pill">Последна печалба: <span id="lastwin">0</span></div>
   </div>
-
   <div class="machine"><div id="reels" class="reels"></div></div>
-
   <div class="controls">
     <button id="spinBtn" class="spin">SPIN</button>
     <div class="wrapbox"><strong>Линии:</strong><span>5 (фиксирани)</span></div>
     <div class="wrapbox"><strong>Общ залог:</strong><span id="totalbet">10</span></div>
   </div>
-
-  <div class="pay">
-    <div><strong>Таблица с печалби (× общия залог)</strong></div>
-    <table>
-      <tr><th>Символ</th><th>3</th><th>4</th><th>5</th></tr>
-      <tr><td>7️⃣ Седмица</td><td>×10</td><td>×40</td><td>×600</td></tr>
-      <tr><td>🍇 / 🍉</td><td>×8</td><td>×20</td><td>×100</td></tr>
-      <tr><td>🔔</td><td>×4</td><td>×10</td><td>×40</td></tr>
-      <tr><td>🍒 🍋 🍊 🍑</td><td>×2</td><td>×6</td><td>×20</td></tr>
-      <tr><td>💲 Scatter (навсякъде)</td><td>×3</td><td>×20</td><td>×100</td></tr>
-      <tr><td>⭐ Scatter (на 1,3,5)</td><td colspan="3">точно 3 = ×20</td></tr>
-    </table>
-    <div>🍀 WILD само на барабани 2–4, замества без scatter-и. Печалбите от scatter се добавят към линиите.</div>
-  </div>
+  <div class="pay">Таблица с печалби (× общия залог) ...</div>
 </div></div>
+
+<!-- 🎵 Звукови файлове -->
+<audio id="soundSpin" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
+<audio id="soundWin" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg"></audio>
+<audio id="soundWild" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg"></audio>
 
 <script>
 (()=>{
@@ -82,104 +40,17 @@ const reelsRoot=document.getElementById('reels'),
       totalBetEl=document.getElementById('totalbet'),
       spinBtn=document.getElementById('spinBtn');
 
-// Config
-const ROWS=3, COLS=5;
-const SYM={SEVEN:'7️⃣',GRAPE:'🍇',WATERMELON:'🍉',BELL:'🔔',CHERRY:'🍒',LEMON:'🍋',ORANGE:'🍊',PLUM:'🍑',WILD:'🍀',STAR:'⭐',DOLLAR:'💲'};
+// 🎵 Звуци
+const sndSpin=document.getElementById('soundSpin'),
+      sndWin=document.getElementById('soundWin'),
+      sndWild=document.getElementById('soundWild');
 
-// Weighted reels
-const base=[[SYM.SEVEN,2],[SYM.GRAPE,5],[SYM.WATERMELON,5],[SYM.BELL,6],[SYM.CHERRY,8],[SYM.LEMON,8],[SYM.ORANGE,8],[SYM.PLUM,8],[SYM.DOLLAR,3]];
-function makeBag(col){
-  const b=[],ex=[];
-  if(col>=1&&col<=3) ex.push([SYM.WILD,3]);           // WILD: reels 2–4
-  if(col===0||col===2||col===4) ex.push([SYM.STAR,2]); // STAR: reels 1,3,5
-  for(const [s,w] of base.concat(ex)) for(let i=0;i<w;i++) b.push(s);
-  return b;
-}
-const reelBag=Array.from({length:COLS},(_,i)=>makeBag(i));
+// функция за пускане на звук
+function play(snd){ snd.currentTime=0; snd.play().catch(()=>{}); }
 
-// Paylines
-const LINES=[
-  [[0,0],[1,0],[2,0],[3,0],[4,0]],
-  [[0,1],[1,1],[2,1],[3,1],[4,1]],
-  [[0,2],[1,2],[2,2],[3,2],[4,2]],
-  [[0,0],[1,1],[2,2],[3,1],[4,0]],
-  [[0,2],[1,1],[2,0],[3,1],[4,2]],
-];
+// ... (същата логика за символи, печалби, линии) ...
 
-// Paytable (× TOTAL BET)
-const PAY={
-  [SYM.SEVEN]:{3:10,4:40,5:600},
-  [SYM.GRAPE]:{3:8,4:20,5:100},
-  [SYM.WATERMELON]:{3:8,4:20,5:100},
-  [SYM.BELL]:{3:4,4:10,5:40},
-  [SYM.CHERRY]:{3:2,4:6,5:20},
-  [SYM.LEMON]:{3:2,4:6,5:20},
-  [SYM.ORANGE]:{3:2,4:6,5:20},
-  [SYM.PLUM]:{3:2,4:6,5:20},
-};
-const SCAT_DOLL={3:3,4:20,5:100}, STAR_PAY=20;
-
-// Build grid
-const grid=[];
-for(let c=0;c<COLS;c++){
-  const col=document.createElement('div'); col.className='reel';
-  reelsRoot.appendChild(col); grid[c]=[];
-  for(let r=0;r<ROWS;r++){
-    const cell=document.createElement('div'); cell.className='cell';
-    cell.textContent=pick(reelBag[c]); col.appendChild(cell); grid[c][r]=cell;
-  }
-}
-
-let credits=1000, spinning=false;
-const normBet=()=>Math.max(1,Math.min(1000,Math.floor(Number(betEl.value)||0)));
-betEl.addEventListener('input',()=>totalBetEl.textContent=normBet());
-totalBetEl.textContent=betEl.value;
-
-// Helpers
-function pick(b){return b[Math.floor(Math.random()*b.length)]}
-function setCol(c,vals){for(let r=0;r<ROWS;r++) grid[c][r].textContent=vals[r]}
-
-// Best match with wilds (L→R)
-function bestMatch(seq){
-  const cand=[SYM.SEVEN,SYM.GRAPE,SYM.WATERMELON,SYM.BELL,SYM.CHERRY,SYM.LEMON,SYM.ORANGE,SYM.PLUM];
-  let best={len:0,sym:null};
-  for(const t of cand){
-    let len=0;
-    for(let i=0;i<seq.length;i++){
-      const s=seq[i];
-      if(s===t||s===SYM.WILD) len++; else break;
-    }
-    if(len>=3&&PAY[t]&&PAY[t][len]&&len>best.len) best={len,sym:t};
-  }
-  return best;
-}
-
-function evalLines(board,bet){
-  let win=0;
-  for(const line of LINES){
-    const seq=line.map(([x,y])=>board[x][y]);
-    const m=bestMatch(seq);
-    if(m.len>=3) win+=PAY[m.sym][m.len]*bet;
-  }
-  return win;
-}
-
-function evalScatters(board,bet){
-  let dollars=0; const starCols=new Set();
-  for(let c=0;c<COLS;c++){
-    for(let r=0;r<ROWS;r++){
-      const s=board[c][r];
-      if(s===SYM.DOLLAR) dollars++;
-      if(s===SYM.STAR && (c===0||c===2||c===4)) starCols.add(c);
-    }
-  }
-  let win=0;
-  if(SCAT_DOLL[dollars]) win+=SCAT_DOLL[dollars]*bet; // anywhere
-  if(starCols.size===3) win+=STAR_PAY*bet;            // exactly one on 1,3,5
-  return win;
-}
-
-// 🍀 POP wilds
+// 🍀 POP wilds + звук
 function popWilds(board){
   for(let c=0;c<COLS;c++){
     for(let r=0;r<ROWS;r++){
@@ -187,6 +58,7 @@ function popWilds(board){
         const cell=grid[c][r];
         cell.classList.remove('wild-pop'); void cell.offsetWidth;
         cell.classList.add('wild-pop');
+        play(sndWild); // 🎵 звук за WILD
         cell.addEventListener('animationend',()=>cell.classList.remove('wild-pop'),{once:true});
       }
     }
@@ -199,28 +71,22 @@ function spin(){
   if(credits<bet){ alert('Недостатъчни кредити.'); return; }
   credits-=bet; creditsEl.textContent=credits; lastWinEl.textContent='0';
   spinning=true; spinBtn.disabled=true;
+  play(sndSpin); // 🎵 звук при SPIN
 
-  const delays=[700,900,1100,1300,1500];
-  const final=Array.from({length:COLS},()=>Array(ROWS).fill(SYM.CHERRY));
-
-  for(let c=0;c<COLS;c++){
-    const t=setInterval(()=>{ setCol(c,[pick(reelBag[c]),pick(reelBag[c]),pick(reelBag[c])]); }, 60+c*10);
-    setTimeout(()=>{
-      clearInterval(t);
-      for(let r=0;r<ROWS;r++) final[c][r]=pick(reelBag[c]);
-      setCol(c,final[c]);
+  // ... (същата анимация и логика за завъртане) ...
 
       if(c===COLS-1){
-        // анимирай детелините
         popWilds(final);
-
         const win=evalLines(final,bet)+evalScatters(final,bet);
         credits+=win; creditsEl.textContent=credits; lastWinEl.textContent=win;
-        if(win>0){ reelsRoot.classList.remove('winflash'); void reelsRoot.offsetWidth; reelsRoot.classList.add('winflash'); }
+        if(win>0){ 
+          play(sndWin); // 🎵 звук при печалба
+          reelsRoot.classList.remove('winflash'); void reelsRoot.offsetWidth;
+          reelsRoot.classList.add('winflash');
+        }
         spinning=false; spinBtn.disabled=false;
       }
-    },delays[c]);
-  }
+  // ...
 }
 spinBtn.addEventListener('click',spin);
 })();
